--- a/jobs/index.html
+++ b/jobs/index.html
@@ -17,14 +17,18 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="postdoc-apc/">Postdoc at APC</a></h4>
-        <p>2-year <b>open</b> postdoctoral position</p>
+        <p>2-year postdoctoral position
+          <br /><b>(open)</b> 
+        </p>
       </div>
     </div>
 
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="postdoc-cea/">Postdoc at CEA</a></h4>
-        <p>2-year <b>open</b> postdoctoral position</p>
+        <p>2-year postdoctoral position
+          <br /><b>(open)</b> 
+        </p>
       </div>
     </div>
 
@@ -42,7 +46,9 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="thesis-apc/">Thesis at APC</a></h4>
-        <p>3-year <b>open</b> thesis position</p>
+        <p>3-year thesis position
+          <br /><b>(open)</b> 
+        </p>
       </div>
     </div>
 
@@ -53,7 +59,7 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="internship-apc/">Internship at APC</a></h4>
-        <p>Internship position (master level)
+        <p>Internship position at master level
           <br /><b>(opening soon..)</b>
         </p>
       </div>
