Add project holders

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,59 @@
 ---
 layout: page
 title: Projects
-subtitle: In construction..
-desc: 
+subtitle: Ongoing and future projects
+desc:
 permalink: /projects/
 ---
+
+<p>Here are the five work packages that have been defined </p>
+
+<div class="projects">
+    <div class="grid no-gutters">
+
+        <div class="unit one-third">
+            <div class="project">
+                <h4 class="project-title"><a href="wp1-sims/">WP 1</a></h4>
+                <p>Realistic image simulation.</p>
+            </div>
+        </div>
+
+        <div class="unit one-third">
+            <div class="project">
+                <h4 class="project-title"><a href="wp2-noise/">WP 2</a></h4>
+                <p>Uncertainty propagation and noise reduction.</p>
+            </div>
+        </div>
+
+        <div class="unit one-third">
+            <div class="project">
+                <h4 class="project-title"><a href="wp3-blending/">WP 3</a></h4>
+                <p>Galaxy deblending.</p>
+            </div>
+        </div>
+    </div><!-- grid -->
+
+    <div class="grid no-gutters">
+
+        <div class="unit one-third">
+            <div class="project">
+                <h4 class="project-title"><a href="wp4-shear/">WP 4</a></h4>
+                <p>Shape measurement.</p>
+            </div>
+        </div>
+
+        <div class="unit one-third">
+            <div class="project">
+                <h4 class="project-title"><a href="wp5-photoz/">WP 5</a></h4>
+                <p>Photometric redshifts.</p>
+            </div>
+        </div>
+
+        <!-- <div class="unit one-third">
+            <div class="project">
+                <h4 class="project-title"><a href="sample-project/">WP 6 (optional)</a></h4>
+                <p>Time series.</p>
+            </div>
+        </div> -->
+    </div><!-- grid -->
+</div>
