Update projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ desc:
 permalink: /projects/
 ---
 
-<p>Here are the five work packages that have been defined </p>
+<!-- <p>Here are the five work packages that have been defined </p> -->
 
 <div class="projects">
     <div class="grid no-gutters">
