--- a/jobs/index.html
+++ b/jobs/index.html
@@ -18,7 +18,7 @@ permalink: /jobs/
       <div class="project">
         <h4 class="project-title"><a href="postdoc-apc/">Postdoc at APC</a></h4>
         <p>2-year postdoctoral position
-          <br /><b>(open)</b> 
+          <br /><b>(filled)</b> 
         </p>
       </div>
     </div>
@@ -27,7 +27,7 @@ permalink: /jobs/
       <div class="project">
         <h4 class="project-title"><a href="postdoc-cea/">Postdoc at CEA</a></h4>
         <p>2-year postdoctoral position
-          <br /><b>(open)</b> 
+          <br /><b>(filled)</b> 
         </p>
       </div>
     </div>
