Add new postdoc position

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -32,6 +32,15 @@ permalink: /jobs/
       </div>
     </div>
 
+    <div class="unit one-third">
+      <div class="project">
+        <h4 class="project-title"><a href="postdoc-apc-2/">Postdoc at APC</a></h4>
+        <p>2-year postdoctoral position starting in 2021
+          <br /><b>(opened)</b> 
+        </p>
+      </div>
+    </div>
+
   </div><!-- grid -->
 
   <div class="grid no-gutters">
