Update jobs page

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -17,7 +17,7 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="postdoc-apc/">Postdoc at APC</a></h4>
-        <p>2-year postdoctoral position
+        <p>2-year postdoctoral position starting in 2020
           <br /><b>(filled)</b> 
         </p>
       </div>
@@ -26,7 +26,7 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="postdoc-cea/">Postdoc at CEA</a></h4>
-        <p>2-year postdoctoral position
+        <p>2-year postdoctoral position starting in 2020
           <br /><b>(filled)</b> 
         </p>
       </div>
@@ -48,15 +48,15 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="thesis-loria/">Thesis at LORIA</a></h4>
-        <p>3-year thesis position
+        <p>3-year thesis position starting in 2019
         <br /><b>(filled)</b></p>
       </div>
     </div>
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="thesis-apc/">Thesis at APC</a></h4>
-        <p>3-year thesis position
-          <br /><b>(open)</b> 
+        <p>3-year thesis position starting in 2021
+          <br /><b>(filled)</b> 
         </p>
       </div>
     </div>
@@ -69,7 +69,7 @@ permalink: /jobs/
       <div class="project">
         <h4 class="project-title"><a href="internship-apc/">Internship at APC</a></h4>
         <p>Internship position at master level
-          <br /><b>(opening soon..)</b>
+          <br /><b>(new internships in 2022..)</b>
         </p>
       </div>
     </div>
