--- a/jobs/index.html
+++ b/jobs/index.html
@@ -35,7 +35,7 @@ permalink: /jobs/
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="postdoc-apc-2/">Postdoc at APC</a></h4>
-        <p>2-year postdoctoral position starting in 2021
+        <p>2-year postdoctoral position starting early 2022
           <br /><b>(opened)</b> 
         </p>
       </div>
