Update jobs filled

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -36,7 +36,7 @@ permalink: /jobs/
       <div class="project">
         <h4 class="project-title"><a href="postdoc-apc-2/">Postdoc at APC</a></h4>
         <p>2-year postdoctoral position starting early 2022
-          <br /><b>(opened)</b> 
+          <br /><b>(filled)</b> 
         </p>
       </div>
     </div>
@@ -69,7 +69,7 @@ permalink: /jobs/
       <div class="project">
         <h4 class="project-title"><a href="internship-apc/">Internship at APC</a></h4>
         <p>Internship position at master level
-          <br /><b>(new internships in 2022..)</b>
+          <br /><b>(filled)</b>
         </p>
       </div>
     </div>
