--- a/projects/index.html
+++ b/projects/index.html
@@ -64,7 +64,7 @@ permalink: /projects/
 <p>
     Biswas et al. 2024 
     <em> 
-        MADNESS: Maximum A posteriori with Deep Neural Networks for Source Separation
+        MADNESS: Maximum A posteriori with Deep Neural Networks for Source Separation,
     </em>
         LSST-DESC internal review
     <!-- <a href="http://arxiv.org/abs/2311.04845"> -->
@@ -75,7 +75,7 @@ permalink: /projects/
 <p>
     Zeghal et al. 2024 
     <em> 
-        Simulation-Based Inference Benchmark for LSST Weak Lensing Cosmology
+        Simulation-Based Inference Benchmark for LSST Weak Lensing Cosmology,
     </em>
         LSST-DESC internal review 
     <!-- <a href="http://arxiv.org/abs/2311.04845"> -->
@@ -97,7 +97,7 @@ permalink: /projects/
 <p>
     Biswas et al. 2023 
     <em> 
-        Bayesian multi-band fitting of alerts for kilonovae detection
+        Bayesian multi-band fitting of alerts for kilonovae detection,
     </em>
         NeurIPS 2023 
     <a href="http://arxiv.org/abs/2311.04845">
@@ -108,7 +108,7 @@ permalink: /projects/
 <p>
     Lanusse et al. 2023
     <em> 
-        AstroCLIP: Cross-Modal Pre-Training for Astronomical Foundation Models
+        AstroCLIP: Cross-Modal Pre-Training for Astronomical Foundation Models,
     </em>
         NeurIPS 2023
     <a href="http://arxiv.org/abs/2310.03024">
@@ -119,7 +119,7 @@ permalink: /projects/
 <p>
     Zeghal et al. 2022
     <em> 
-        Neural Posterior Estimation with Differentiable Simulators, ICML 2022, 
+        Neural Posterior Estimation with Differentiable Simulators,
     </em>
         ICML 2022
     <a href="http://arxiv.org/abs/2207.05636">
@@ -130,7 +130,7 @@ permalink: /projects/
 <p>
     Guinot et al. 2022
     <em> 
-        ShapePipe: a new shape measurement pipeline and weak-lensing application to UNIONS/CFIS data
+        ShapePipe: a new shape measurement pipeline and weak-lensing application to UNIONS/CFIS data,
     </em>
         A&A 666, A162
     <a href="http://arxiv.org/abs/2204.04798">
@@ -141,7 +141,7 @@ permalink: /projects/
 <p>
     Théobald et al. 2021
     <em> 
-        A Bayesian Convolutional Neural Network for Robust Galaxy Ellipticity Regression
+        A Bayesian Convolutional Neural Network for Robust Galaxy Ellipticity Regression,
     </em>
         ECML-PKDD 2021 
     <a href="http://arxiv.org/abs/2104.09970">
@@ -152,7 +152,7 @@ permalink: /projects/
 <p>
     Arcelin et al. 2021 
     <em> 
-        Deblending galaxies with Variational Autoencoders: a joint multi-band, multi-instrument approach
+        Deblending galaxies with Variational Autoencoders: a joint multi-band, multi-instrument approach,
     </em>
         MNRAS 500, 531 
     <a href="http://arxiv.org/abs/2005.12039">
@@ -168,7 +168,7 @@ permalink: /projects/
 <p>
     Serrano et al. 2024
     <em> 
-        Euclid preparation: The pre-launch Science Ground Segment simulation framework
+        Euclid preparation: The pre-launch Science Ground Segment simulation framework,
     </em>
         A&A submitted
     <a href="http://arxiv.org/abs/2401.01452">
@@ -179,7 +179,7 @@ permalink: /projects/
 <p>
     Campagne et al. 2023
     <em> 
-        JAX-COSMO: An End-to-End Differentiable and GPU Accelerated Cosmology Library
+        JAX-COSMO: An End-to-End Differentiable and GPU Accelerated Cosmology Library,
     </em>
         The Open Journal of Astrophysics 6.
     <a href="http://arxiv.org/abs/2302.05163">
@@ -190,7 +190,7 @@ permalink: /projects/
 <p>
     Guy et al. 2022
     <em> 
-        Rubin-Euclid Derived Data Products: Initial Recommendations
+        Rubin-Euclid Derived Data Products: Initial Recommendations,
     </em>
         published on Zenodo 
     <a href="http://arxiv.org/abs/2201.03862">
@@ -204,7 +204,7 @@ permalink: /projects/
 <p>
     Remy et al. 2022
     <em> 
-        Towards solving model bias in cosmic shear forward modeling
+        Towards solving model bias in cosmic shear forward modeling,
     </em>
         NeurIPS 2022
     <a href="http://arxiv.org/abs/2210.16243">
@@ -215,7 +215,7 @@ permalink: /projects/
 <p>
     Bretonnière et al. 2021 
     <em> 
-        Probabilistic segmentation of overlapping galaxies for large cosmological surveys
+        Probabilistic segmentation of overlapping galaxies for large cosmological surveys,
     </em>
         NeurIPS 2021 
     <a href="http://arxiv.org/abs/2111.15455">
