--- a/projects/index.html
+++ b/projects/index.html
@@ -160,6 +160,17 @@ permalink: /projects/
     </a>
 </p>
 
+<p>
+    Boucaud et al. 2019
+    <em> 
+        Photometry of high-redshift blended galaxies using deep learning,
+    </em>
+        MNRAS 491, 2
+    <a href="http://arxiv.org/abs/1905.01324">
+        <img src="https://img.shields.io/badge/arXiv-1905.01324-red.svg">
+    </a>
+</p>
+
 
 <h3>
     Significant contributions
