Update papers list and add github links

--- a/projects/index.html
+++ b/projects/index.html
@@ -66,10 +66,15 @@ permalink: /projects/
     <em> 
         MADNESS: Maximum A posteriori with Deep Neural Networks for Source Separation,
     </em>
-        LSST-DESC internal review
-    <!-- <a href="http://arxiv.org/abs/2311.04845"> -->
+        passed LSST-DESC internal review, submitted to A&A
+    <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
         <!-- arXiv -->
     <!-- </a> -->
+    <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
+    <a href="https://github.com/b-biswas/madness">
+        <img src="https://img.shields.io/badge/madness-65a585?logo=github">
+    </a>
+
 </p>
 
 <p>
@@ -77,21 +82,29 @@ permalink: /projects/
     <em> 
         Simulation-Based Inference Benchmark for LSST Weak Lensing Cosmology,
     </em>
-        LSST-DESC internal review 
-    <!-- <a href="http://arxiv.org/abs/2311.04845"> -->
+        passed LSST-DESC internal review, submitted to A&A
+    <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
         <!-- arXiv -->
     <!-- </a> -->
+    <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
+    <a href="https://github.com/DifferentiableUniverseInitiative/sbi_lens">
+        <img src="https://img.shields.io/badge/SBI_lens-65a585?logo=github">
+    </a>
+
 </p>
 
 <p>
     Lanzieri, Zeghal et al. 2024
     <em> 
-        Optimal Neural Summarisation for Full-Field Weak Lensing Cosmological Implicit Inference
+        Optimal Neural Summarisation for Full-Field Weak Lensing Cosmological Implicit Inference,
     </em>
-        To be submitted to A&A
-    <!-- <a href="http://arxiv.org/abs/2311.04845"> -->
-        <!-- arXiv:2311.04845 -->
-    <!-- </a> -->
+        submitted to A&A
+    <a href="https://arxiv.org/abs/2407.10877">
+        arXiv:2407.10877
+    </a>
+    <a href="https://github.com/DifferentiableUniverseInitiative/sbi_lens">
+        <img src="https://img.shields.io/badge/SBI_lens-65a585?logo=github">
+    </a>
 </p>
 
 <p>
@@ -100,8 +113,11 @@ permalink: /projects/
         Bayesian multi-band fitting of alerts for kilonovae detection,
     </em>
         NeurIPS 2023 
-    <a href="http://arxiv.org/abs/2311.04845">
+    <a href="https://arxiv.org/abs/2311.04845">
         <img src="https://img.shields.io/badge/arXiv-2311.04845-red.svg">
+    </a>
+    <a href="https://github.com/b-biswas/kndetect">
+        <img src="https://img.shields.io/badge/kndetect-65a585?logo=github">
     </a>
 </p>
 
@@ -111,8 +127,11 @@ permalink: /projects/
         AstroCLIP: Cross-Modal Pre-Training for Astronomical Foundation Models,
     </em>
         NeurIPS 2023
-    <a href="http://arxiv.org/abs/2310.03024">
+    <a href="https://arxiv.org/abs/2310.03024">
         <img src="https://img.shields.io/badge/arXiv-2310.03024-red.svg">
+    </a>
+    <a href="https://github.com/PolymathicAI/AstroCLIP">
+        <img src="https://img.shields.io/badge/AstroCLIP-65a585?logo=github">
     </a>
 </p>
 
@@ -122,8 +141,11 @@ permalink: /projects/
         Neural Posterior Estimation with Differentiable Simulators,
     </em>
         ICML 2022
-    <a href="http://arxiv.org/abs/2207.05636">
+    <a href="https://arxiv.org/abs/2207.05636">
         <img src="https://img.shields.io/badge/arXiv-2207.05636-red.svg">
+    </a>
+    <a href="https://github.com/Justinezgh/SBI-Diff-Simulator">
+        <img src="https://img.shields.io/badge/SBI_diff_sim-65a585?logo=github">
     </a>
 </p>
 
@@ -133,8 +155,11 @@ permalink: /projects/
         ShapePipe: a new shape measurement pipeline and weak-lensing application to UNIONS/CFIS data,
     </em>
         A&A 666, A162
-    <a href="http://arxiv.org/abs/2204.04798">
+    <a href="https://arxiv.org/abs/2204.04798">
         <img src="https://img.shields.io/badge/arXiv-2204.04798-red.svg">
+    </a>
+    <a href="https://github.com/CosmoStat/shapepipe">
+        <img src="https://img.shields.io/badge/ShapePipe-65a585?logo=github">
     </a>
 </p>
 
@@ -144,7 +169,7 @@ permalink: /projects/
         A Bayesian Convolutional Neural Network for Robust Galaxy Ellipticity Regression,
     </em>
         ECML-PKDD 2021 
-    <a href="http://arxiv.org/abs/2104.09970">
+    <a href="https://arxiv.org/abs/2104.09970">
         <img src="https://img.shields.io/badge/arXiv-2104.09970-red.svg">
     </a>
 </p>
@@ -155,8 +180,12 @@ permalink: /projects/
         Deblending galaxies with Variational Autoencoders: a joint multi-band, multi-instrument approach,
     </em>
         MNRAS 500, 531 
-    <a href="http://arxiv.org/abs/2005.12039">
+    <a href="https://arxiv.org/abs/2005.12039">
         <img src="https://img.shields.io/badge/arXiv-2005.12039-red.svg">
+    </a>
+    <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
+    <a href="https://github.com/astrodeepnet/debvader">
+        <img src="https://img.shields.io/badge/debvader-65a585?logo=github">
     </a>
 </p>
 
@@ -166,8 +195,14 @@ permalink: /projects/
         Photometry of high-redshift blended galaxies using deep learning,
     </em>
         MNRAS 491, 2
-    <a href="http://arxiv.org/abs/1905.01324">
+    <a href="https://arxiv.org/abs/1905.01324">
         <img src="https://img.shields.io/badge/arXiv-1905.01324-red.svg">
+    </a>
+    <a href="https://github.com/aboucaud/coindeblend">
+        <img src="https://img.shields.io/badge/coindeblend-65a585?logo=github">
+    </a>
+    <a href="https://github.com/aboucaud/candels-blender">
+        <img src="https://img.shields.io/badge/candels-blender-65a585?logo=github">
     </a>
 </p>
 
@@ -177,14 +212,33 @@ permalink: /projects/
 </h3>
 
 <p>
+    Mendoza et al. 2024
+    <em>
+        The Blending Toolkit: a Simulation Framework for Evaluation of Galaxy Detection and Deblending,
+    </em>
+        passed LSST-DESC internal, submitted to the Open Journal of Astrophysics (OJA)
+        <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
+            <!-- <img src="https://img.shields.io/badge/arXiv-2311.04845-red.svg"> -->
+        <!-- </a> -->
+        <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
+        <a href="https://github.com/LSSTDESC/BlendingToolKit">
+            <img src="https://img.shields.io/badge/BlendingToolkit-65a585?logo=github">
+        </a>
+        <a href="https://github.com/LSSTDESC/surveycodex">
+            <img src="https://img.shields.io/badge/SurveyCodex-65a585?logo=github">
+        </a>
+</p>
+
+<p>
     Serrano et al. 2024
     <em> 
         Euclid preparation: The pre-launch Science Ground Segment simulation framework,
     </em>
         A&A submitted
-    <a href="http://arxiv.org/abs/2401.01452">
+    <a href="https://arxiv.org/abs/2401.01452">
         <img src="https://img.shields.io/badge/arXiv-2401.01452-red.svg">
     </a>
+    <img src="https://img.shields.io/badge/Euclid-collaboration_paper-blue">
 </p>
 
 <p>
@@ -193,8 +247,11 @@ permalink: /projects/
         JAX-COSMO: An End-to-End Differentiable and GPU Accelerated Cosmology Library,
     </em>
         The Open Journal of Astrophysics 6.
-    <a href="http://arxiv.org/abs/2302.05163">
+    <a href="https://arxiv.org/abs/2302.05163">
         <img src="https://img.shields.io/badge/arXiv-2302.05163-red.svg">
+    </a>
+    <a href="https://github.com/DifferentiableUniverseInitiative/jax_cosmo">
+        <img src="https://img.shields.io/badge/jax--cosmo-65a585?logo=github">
     </a>
 </p>
 
@@ -204,7 +261,7 @@ permalink: /projects/
         Rubin-Euclid Derived Data Products: Initial Recommendations,
     </em>
         published on Zenodo 
-    <a href="http://arxiv.org/abs/2201.03862">
+    <a href="https://arxiv.org/abs/2201.03862">
         <img src="https://img.shields.io/badge/arXiv-2201.03862-red.svg">
     </a>
     <!-- <a href="https://doi.org/10.5281/zenodo.7195671"> -->
@@ -218,7 +275,7 @@ permalink: /projects/
         Towards solving model bias in cosmic shear forward modeling,
     </em>
         NeurIPS 2022
-    <a href="http://arxiv.org/abs/2210.16243">
+    <a href="https://arxiv.org/abs/2210.16243">
         <img src="https://img.shields.io/badge/arXiv-2210.16243-red.svg">
     </a>
 </p>
@@ -229,7 +286,7 @@ permalink: /projects/
         Probabilistic segmentation of overlapping galaxies for large cosmological surveys,
     </em>
         NeurIPS 2021 
-    <a href="http://arxiv.org/abs/2111.15455">
+    <a href="https://arxiv.org/abs/2111.15455">
         <img src="https://img.shields.io/badge/arXiv-2111.15455-red.svg">
     </a>
 </p>
