Fix arxiv color and github badges

--- a/projects/index.html
+++ b/projects/index.html
@@ -72,7 +72,7 @@ permalink: /projects/
     <!-- </a> -->
     <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
     <a href="https://github.com/b-biswas/madness">
-        <img src="https://img.shields.io/badge/madness-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-madness-65a585?logo=github">
     </a>
 
 </p>
@@ -88,7 +88,7 @@ permalink: /projects/
     <!-- </a> -->
     <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
     <a href="https://github.com/DifferentiableUniverseInitiative/sbi_lens">
-        <img src="https://img.shields.io/badge/SBI_lens-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-SBI_lens-65a585?logo=github">
     </a>
 
 </p>
@@ -100,10 +100,10 @@ permalink: /projects/
     </em>
         submitted to A&A
     <a href="https://arxiv.org/abs/2407.10877">
-        arXiv:2407.10877
+        <img src="https://img.shields.io/badge/arXiv-2407.10877-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/DifferentiableUniverseInitiative/sbi_lens">
-        <img src="https://img.shields.io/badge/SBI_lens-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-SBI_lens-65a585?logo=github">
     </a>
 </p>
 
@@ -114,10 +114,10 @@ permalink: /projects/
     </em>
         NeurIPS 2023 
     <a href="https://arxiv.org/abs/2311.04845">
-        <img src="https://img.shields.io/badge/arXiv-2311.04845-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2311.04845-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/b-biswas/kndetect">
-        <img src="https://img.shields.io/badge/kndetect-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-kndetect-65a585?logo=github">
     </a>
 </p>
 
@@ -128,10 +128,10 @@ permalink: /projects/
     </em>
         NeurIPS 2023
     <a href="https://arxiv.org/abs/2310.03024">
-        <img src="https://img.shields.io/badge/arXiv-2310.03024-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2310.03024-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/PolymathicAI/AstroCLIP">
-        <img src="https://img.shields.io/badge/AstroCLIP-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-AstroCLIP-65a585?logo=github">
     </a>
 </p>
 
@@ -142,10 +142,10 @@ permalink: /projects/
     </em>
         ICML 2022
     <a href="https://arxiv.org/abs/2207.05636">
-        <img src="https://img.shields.io/badge/arXiv-2207.05636-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2207.05636-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/Justinezgh/SBI-Diff-Simulator">
-        <img src="https://img.shields.io/badge/SBI_diff_sim-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-SBI_diff_sim-65a585?logo=github">
     </a>
 </p>
 
@@ -156,10 +156,10 @@ permalink: /projects/
     </em>
         A&A 666, A162
     <a href="https://arxiv.org/abs/2204.04798">
-        <img src="https://img.shields.io/badge/arXiv-2204.04798-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2204.04798-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/CosmoStat/shapepipe">
-        <img src="https://img.shields.io/badge/ShapePipe-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-ShapePipe-65a585?logo=github">
     </a>
 </p>
 
@@ -170,7 +170,7 @@ permalink: /projects/
     </em>
         ECML-PKDD 2021 
     <a href="https://arxiv.org/abs/2104.09970">
-        <img src="https://img.shields.io/badge/arXiv-2104.09970-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2104.09970-a42c25?logo=arxiv.svg">
     </a>
 </p>
 
@@ -181,28 +181,28 @@ permalink: /projects/
     </em>
         MNRAS 500, 531 
     <a href="https://arxiv.org/abs/2005.12039">
-        <img src="https://img.shields.io/badge/arXiv-2005.12039-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2005.12039-a42c25?logo=arxiv.svg">
     </a>
     <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
     <a href="https://github.com/astrodeepnet/debvader">
-        <img src="https://img.shields.io/badge/debvader-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-debvader-65a585?logo=github">
     </a>
 </p>
 
 <p>
     Boucaud et al. 2019
     <em> 
-        Photometry of high-redshift blended galaxies using deep learning,
+        Photometry of high-a42c25?logo=arxiv blended galaxies using deep learning,
     </em>
         MNRAS 491, 2
     <a href="https://arxiv.org/abs/1905.01324">
-        <img src="https://img.shields.io/badge/arXiv-1905.01324-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-1905.01324-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/aboucaud/coindeblend">
-        <img src="https://img.shields.io/badge/coindeblend-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-Coin_Deblend-65a585?logo=github">
     </a>
     <a href="https://github.com/aboucaud/candels-blender">
-        <img src="https://img.shields.io/badge/candels-blender-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-Candels_blender-65a585?logo=github">
     </a>
 </p>
 
@@ -218,14 +218,14 @@ permalink: /projects/
     </em>
         passed LSST-DESC internal, submitted to the Open Journal of Astrophysics (OJA)
         <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
-            <!-- <img src="https://img.shields.io/badge/arXiv-2311.04845-red.svg"> -->
+            <!-- <img src="https://img.shields.io/badge/arXiv-2311.04845-a42c25?logo=arxiv.svg"> -->
         <!-- </a> -->
         <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-blue">
         <a href="https://github.com/LSSTDESC/BlendingToolKit">
-            <img src="https://img.shields.io/badge/BlendingToolkit-65a585?logo=github">
+            <img src="https://img.shields.io/badge/GitHub-BlendingToolkit-65a585?logo=github">
         </a>
         <a href="https://github.com/LSSTDESC/surveycodex">
-            <img src="https://img.shields.io/badge/SurveyCodex-65a585?logo=github">
+            <img src="https://img.shields.io/badge/GitHub-SurveyCodex-65a585?logo=github">
         </a>
 </p>
 
@@ -236,7 +236,7 @@ permalink: /projects/
     </em>
         A&A submitted
     <a href="https://arxiv.org/abs/2401.01452">
-        <img src="https://img.shields.io/badge/arXiv-2401.01452-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2401.01452-a42c25?logo=arxiv.svg">
     </a>
     <img src="https://img.shields.io/badge/Euclid-collaboration_paper-blue">
 </p>
@@ -248,10 +248,10 @@ permalink: /projects/
     </em>
         The Open Journal of Astrophysics 6.
     <a href="https://arxiv.org/abs/2302.05163">
-        <img src="https://img.shields.io/badge/arXiv-2302.05163-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2302.05163-a42c25?logo=arxiv.svg">
     </a>
     <a href="https://github.com/DifferentiableUniverseInitiative/jax_cosmo">
-        <img src="https://img.shields.io/badge/jax--cosmo-65a585?logo=github">
+        <img src="https://img.shields.io/badge/GitHub-jax--cosmo-65a585?logo=github">
     </a>
 </p>
 
@@ -262,7 +262,7 @@ permalink: /projects/
     </em>
         published on Zenodo 
     <a href="https://arxiv.org/abs/2201.03862">
-        <img src="https://img.shields.io/badge/arXiv-2201.03862-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2201.03862-a42c25?logo=arxiv.svg">
     </a>
     <!-- <a href="https://doi.org/10.5281/zenodo.7195671"> -->
         <!-- <img src="https://zenodo.org/badge/DOI/10.5281/zenodo.7195671.svg" alt="DOI"> -->
@@ -276,7 +276,7 @@ permalink: /projects/
     </em>
         NeurIPS 2022
     <a href="https://arxiv.org/abs/2210.16243">
-        <img src="https://img.shields.io/badge/arXiv-2210.16243-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2210.16243-a42c25?logo=arxiv.svg">
     </a>
 </p>
 
@@ -287,6 +287,6 @@ permalink: /projects/
     </em>
         NeurIPS 2021 
     <a href="https://arxiv.org/abs/2111.15455">
-        <img src="https://img.shields.io/badge/arXiv-2111.15455-red.svg">
+        <img src="https://img.shields.io/badge/arXiv-2111.15455-a42c25?logo=arxiv.svg">
     </a>
 </p>
