--- a/projects/index.html
+++ b/projects/index.html
@@ -192,7 +192,7 @@ permalink: /projects/
 <p>
     Boucaud et al. 2019
     <em> 
-        Photometry of high-d13229?logo=arxiv blended galaxies using deep learning,
+        Photometry of high-redshift blended galaxies using deep learning,
     </em>
         MNRAS 491, 2
     <a href="https://arxiv.org/abs/1905.01324">
@@ -217,9 +217,6 @@ permalink: /projects/
         The Blending Toolkit: a Simulation Framework for Evaluation of Galaxy Detection and Deblending,
     </em>
         passed LSST-DESC internal, submitted to the Open Journal of Astrophysics (OJA)
-        <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
-            <!-- <img src="https://img.shields.io/badge/arXiv-2311.04845-d13229?logo=arxiv.svg"> -->
-        <!-- </a> -->
         <a href="https://github.com/LSSTDESC/BlendingToolKit">
             <img src="https://img.shields.io/badge/GitHub-BlendingToolkit-65a585?logo=github">
         </a>
