Add arxiv link for madness

--- a/projects/index.html
+++ b/projects/index.html
@@ -61,21 +61,6 @@ permalink: /projects/
     Lead authorship
 </h3>
 
-<p>
-    Biswas et al. 2024 
-    <em> 
-        MADNESS: Maximum A posteriori with Deep Neural Networks for Source Separation,
-    </em>
-        passed LSST-DESC internal review, submitted to A&A
-    <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
-        <!-- arXiv -->
-    <!-- </a> -->
-    <a href="https://github.com/b-biswas/madness">
-        <img src="https://img.shields.io/badge/GitHub-madness-65a585?logo=github">
-    </a>
-    <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-d18529">
-
-</p>
 
 <p>
     Zeghal et al. 2024 
@@ -84,10 +69,26 @@ permalink: /projects/
     </em>
         passed LSST-DESC internal review, submitted to A&A
     <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
-        <!-- arXiv -->
+        <!-- <img src="https://img.shields.io/badge/arXiv-2408.15236-d13229?logo=arxiv.svg"> -->
     <!-- </a> -->
     <a href="https://github.com/DifferentiableUniverseInitiative/sbi_lens">
         <img src="https://img.shields.io/badge/GitHub-SBI_lens-65a585?logo=github">
+    </a>
+    <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-d18529">
+
+</p>
+
+<p>
+    Biswas et al. 2024 
+    <em> 
+        MADNESS: Maximum A posteriori with Deep Neural Networks for Source Separation,
+    </em>
+        passed LSST-DESC internal review, submitted to A&A
+    <a href="https://arxiv.org/abs/2408.15236">
+        <img src="https://img.shields.io/badge/arXiv-2408.15236-d13229?logo=arxiv.svg">
+    </a>
+    <a href="https://github.com/b-biswas/madness">
+        <img src="https://img.shields.io/badge/GitHub-madness-65a585?logo=github">
     </a>
     <img src="https://img.shields.io/badge/LSST_DESC-collaboration_paper-d18529">
 
