Justine paper on arxiv

--- a/projects/index.html
+++ b/projects/index.html
@@ -68,8 +68,8 @@ permalink: /projects/
         Simulation-Based Inference Benchmark for LSST Weak Lensing Cosmology,
     </em>
         passed LSST-DESC internal review, submitted to A&A
-    <!-- <a href="https://arxiv.org/abs/2311.04845"> -->
-        <!-- <img src="https://img.shields.io/badge/arXiv-2408.15236-d13229?logo=arxiv.svg"> -->
+    <a href="https://arxiv.org/abs/2409.17975">
+        <img src="https://img.shields.io/badge/arXiv-2409.17975-d13229?logo=arxiv.svg">
     <!-- </a> -->
     <a href="https://github.com/DifferentiableUniverseInitiative/sbi_lens">
         <img src="https://img.shields.io/badge/GitHub-SBI_lens-65a585?logo=github">
