--- a/jobs/index.html
+++ b/jobs/index.html
@@ -13,7 +13,21 @@ permalink: /jobs/
 <div class="projects">
 
   <div class="grid no-gutters">
-  
+     <div class="unit one-third">
+      <div class="project">
+        <h4 class="project-title"><a href="thesis-apc-2025/">Thesis at APC</a></h4>
+        <p>3-year thesis position starting in 2025
+          <br /> 
+        </p>
+      </div>
+    </div>
+
+  </div><!-- grid -->
+
+  <div class="grid no-gutters">
+
+
+    
     <div class="unit one-third">
       <div class="project">
         <h4 class="project-title"><a href="postdoc-apc/">Postdoc at APC</a></h4>
