Adding Alessio paper

--- a/projects/index.html
+++ b/projects/index.html
@@ -61,6 +61,20 @@ permalink: /projects/
     Lead authorship
 </h3>
 
+<p>
+    Spagnoletti et al. 2024 
+    <em> 
+        Bayesian Deconvolution of Astronomical Images with Diffusion Models: Quantifying Prior-Driven Features in Reconstructions,
+    </em>
+        accepted in NeurIPS 2024
+    <a href="https://arxiv.org/abs/2411.19158">
+        <img src="https://img.shields.io/badge/arXiv-2411.19158-d13229?logo=arxiv.svg">
+    <!-- </a> -->
+    <a href="https://github.com/astrodeepnet/diffusion4astro">
+        <img src="https://img.shields.io/badge/GitHub-diffusion4astro-65a585?logo=github">
+    </a>
+
+</p>
 
 <p>
     Zeghal et al. 2024 
